--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-sidebar": "^2.2.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
