--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.1",
+    "react-redux-form": "^1.5.3",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "react-sidebar": "^2.2.1",
